# SFMLSnippets

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  README.md  aircraft.cpp  aircraft.hpp  category.cpp  category.hpp  command.cpp  command.hpp  command_queue.cpp  command_queue.hpp  entity.cpp  entity.hpp  main.cpp  player.cpp  player.hpp  resource_holder.hpp  resource_holder.inl  resource_identifiers.hpp  scene_node.cpp  scene_node.hpp  sprite_node.cpp  sprite_node.hpp  string_helpers.hpp  string_helpers.inl  texture_holder.cpp  texture_holder.hpp  world.cpp  world.hpp
